# Simple-ANN

./: CMakeLists.txt  LICENSE  README.md
lib/OpenBLAS/: LICENSE
src/: main.cpp
src/DatasetProcessing/: Reader.cpp  Reader.h  Utility.cpp  Utility.h  mnist_reader.hpp
src/Neural/: Network.cpp  Network.h
